--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* Create CSS selectors that hook into the unique id's or classes in the HTML */
 
 body {
-    font-family: Impact, Charcoal, fantasy;
+    font-family: Neue Helvetica;
 }
 
 #swapList {
@@ -22,7 +22,7 @@ li {
 input[type=text] {
     border-width: 0 0 1px 0;
     border-color: #333;
-    color: red;
+    color: rgba(216, 170, 201, 0.852);
     font-size: 12pt;
 }
 
@@ -30,7 +30,7 @@ input[type=text] {
     text-align: center;
 }
 
-#swapButton {
+#launchButton {
     margin-top: 30px;
     width: 200px;
 }
@@ -47,3 +47,32 @@ input[type=text] {
     text-decoration: underline;
     color: DarkRed;
 }
+
+
+/* tooltip stuff */
+/* Tooltip container */
+.tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+  }
+  
+  /* Tooltip text */
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 200px;
+    background-color: rgb(139, 137, 137);
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+   
+    /* Position the tooltip text - see examples below! */
+    position: absolute;
+    z-index: 1;
+  }
+  
+  /* Show the tooltip text when you mouse over the tooltip container */
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+  }
